testdata/baselines/reference/submodule/conformance/taggedTemplateStringsWithOverloadResolution2_ES6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2318: Cannot find global type 'TemplateStringsArray'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
taggedTemplateStringsWithOverloadResolution2_ES6.ts(1,21): error TS2304: Cannot find name 'TemplateStringsArray'.
taggedTemplateStringsWithOverloadResolution2_ES6.ts(11,21): error TS2304: Cannot find name 'TemplateStringsArray'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2318: Cannot find global type 'TemplateStringsArray'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== taggedTemplateStringsWithOverloadResolution2_ES6.ts (2 errors) ====
    function foo1(strs: TemplateStringsArray, x: number): string;
                        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    function foo1(strs: string[], x: number): number;
    function foo1(...stuff: any[]): any {
        return undefined;
    }
    
    var a = foo1 `${1}`;
    var b = foo1([], 1);
    
    function foo2(strs: string[], x: number): number;
    function foo2(strs: TemplateStringsArray, x: number): string;
                        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    function foo2(...stuff: any[]): any {
        return undefined;
    }
    
    var c = foo2 `${1}`;
    var d = foo2([], 1);